--- a/package.json
+++ b/package.json
@@ -15,15 +15,15 @@
     "e2e": "npx playwright test __e2e__"
   },
   "dependencies": {
+    "@prisma/client": "3.9.0",
+    "@supabase/supabase-auth-helpers": "^1.0.6",
     "autoprefixer": "^10.4.0",
     "next": "12.0.9",
+    "postcss": "^8.3.11",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-test-renderer": "^17.0.2",
-    "@supabase/supabase-auth-helpers": "^1.0.6",
-    "tailwindcss": "^3.0.23",
-    "postcss": "^8.3.11",
-    "@prisma/client": "3.9.0"
+    "tailwindcss": "^3.0.23"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.14.1",
@@ -31,10 +31,10 @@
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
     "jest": "^27.2.2",
+    "prisma": "3",
     "ts-jest": "^27.0.7",
     "ts-node": "^10.4.0",
-    "typescript": "^4.3.5",
-    "prisma": "3"
+    "typescript": "^4.3.5"
   },
   "prisma": {
     "seed": "node prisma/seed.js"
