--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-test-renderer": "^17.0.2",
-    "tailwindcss": "^3.0.23"
+    "tailwindcss": "^3.0.23",
+    "ethers": "^5.5.1",
+    "web3modal": "^1.9.5",
+    "@walletconnect/web3-provider": "^1.7.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.14.1",
