--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "tailwindcss": "^3.0.23",
     "ethers": "^5.5.1",
     "web3modal": "^1.9.5",
-    "@walletconnect/web3-provider": "^1.7.1"
+    "@walletconnect/web3-provider": "^1.7.1",
+    "store2": "^2.13.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.14.1",
