--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "ethers": "^5.5.1",
     "web3modal": "^1.9.5",
     "@walletconnect/web3-provider": "^1.7.1",
-    "store2": "^2.13.1"
+    "store2": "^2.13.1",
+    "@supabase/supabase-js": "^1.29.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.14.1",
